--- a/supermarket/templates/supermarket/home.html
+++ b/supermarket/templates/supermarket/home.html
@@ -5,8 +5,8 @@
 {% block principal %}
     <section class="section-content">
         <div class="container">
-            <h2 class="page-header">Mercado com desconto</h2>
-            <p>Uma nova experiência em pesquisa de produtos de supermercados</p>
+            <h2 class="page-header">SuperMarket</h2>
+            <p><strong>Ofertas na palma da sua mão!</strong></p>
             <img class="img-responsive" src=" {% static '/img/logo_top.png' %}" alt="Mercado com desconto">
         </div>
     </section>
