--- a/supermarket/templates/supermarket/novo_produto.html
+++ b/supermarket/templates/supermarket/novo_produto.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block titulo %}Novo produto - Mercado com desconto{% endblock %}
+{% block titulo %}Novo produto - SuperMarket{% endblock %}
 
 
 {% block principal %}
