--- a/supermarket/templates/supermarket/novo_promocao.html
+++ b/supermarket/templates/supermarket/novo_promocao.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block titulo %}Nova promoção - Mercado com desconto{% endblock %}
+{% block titulo %}Nova promoção - SuperMarket{% endblock %}
 
 {% block principal %}
     <section class="section-content">
