--- a/static/css/supermarket.css
+++ b/static/css/supermarket.css
@@ -3,6 +3,12 @@
     border-radius: 0;
 }
 
+.navbar-market{
+    background-color: #88ca41;
+    border-bottom: 1px solid #88ca41;
+    margin-bottom: 0;
+}
+
 .navbar-brand a img {
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -15,7 +21,7 @@
 }
 
 .navbar-brand-market img {
-    margin-top: 2px;
+    margin-top: 0px;
     margin-left: 15px;
 }
 
