--- a/supermarket/templates/layout.html
+++ b/supermarket/templates/layout.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
 <head>
     {% block head %} {% endblock %}
-    <title>{% block titulo %}Mercado com desconto{% endblock %}</title>
+    <title>{% block titulo %}SuperMarket{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static '/css/supermarket.css' %}">
@@ -34,7 +34,7 @@
             </button>
             {% load static %}
             <a class="navbar-brand navbar-brand-market"><img src="{% static '/img/logo.png' %}"
-                                                             style="height: 100%; border-radius: 12%"></a>
+                                                             style="height: 170%; border-radius: 10%"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -57,7 +57,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false"><i
                                 class="fa fa-user-o"
-                                style="font-size:16px;"></i><span> {{ request.user.username }}</span></a>
+                                style="font-size:16px;"></i><span> {{ request.user.username }}</span><span
+                                class="caret"></span></a>
                         <ul class="dropdown-menu">
                             {% if request.user.userprofile.cliente %}
                                 <li>
