--- a/supermarket/templates/supermarket/contato.html
+++ b/supermarket/templates/supermarket/contato.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block class_contato %} class="active" {% endblock %}
-{% block titulo %}Contato - Mercado com desconto{% endblock %}
+{% block titulo %}Contato - SuperMarket{% endblock %}
 
 {% block principal %}
     <section class="section-content">
