--- a/supermarket/templates/supermarket/produtos.html
+++ b/supermarket/templates/supermarket/produtos.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block titulo %}Produtos - Mercado com desconto{% endblock %}
+{% block titulo %}Produtos - SuperMarket{% endblock %}
 {% load static %}
 
 {% block principal %}
