--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -87,7 +87,7 @@
         <div class="container">
             <table class="table table-striped">
                 <thead>
-                <th colspan="2">Produto</th>
+                <th colspan="2">Dados do produto</th>
                 {#                <th>Estabelecimento</th>#}
                 <th>Dados da oferta</th>
                 {#                <th>Válido até</th>#}
