--- a/supermarket/templates/supermarket/home.html
+++ b/supermarket/templates/supermarket/home.html
@@ -5,9 +5,35 @@
 {% block principal %}
     <section class="section-content">
         <div class="container">
-            <h2 class="page-header">SuperMarket</h2>
-            <p><strong>Ofertas na palma da sua mão!</strong></p>
-            <img class="img-responsive" src=" {% static '/img/logo_top.png' %}" alt="Mercado com desconto">
+            <br><br>
+            <div class="row">
+                <div class="col-sm-6">
+                    <p class="p">O Mercado com Desconto vem atender dois pontos principais no segmento do varejo,
+                        vinculado a
+                        Supermercados, de um lado o usuário que necessita de informações rápidas e agrupadas e do
+                        Supermercado
+                        que necessita de maior eficácia na divulgação de seus produtos em promoção. Nesse sentido a
+                        plataforma
+                        promoverá a divulgação das promoções aos consumidores.</p>
+                    <hr>
+                    <p class="p">
+                        Com o desenvolvimento de um Portal Web na base de paradigmas de programação orientada a objetos
+                        em
+                        conjunto com sistema de banco de dados. Almeja a possibilidade, de os usuários, visualizarem as
+                        ofertas
+                        de cada estabelecimento e, proporcionar assim, uma ampla pesquisa de preço de forma rápida e
+                        simples.
+                        Por outro lado, possibilitará aos Supermercados ampliar o alcance de sua divulgação, e assim
+                        reduzir a
+                        utilização de material impresso, comumente utilizada para tais divulgações; o que contribuirá
+                        para
+                        positivamente ao meio ambiente.</p>
+                </div>
+                <div class="col-sm-6">
+                    <img class="img-responsive" src=" {% static '/img/logo_top.jpg' %}" style="border-radius: 3%"
+                         alt="Mercado com desconto">
+                </div>
+            </div>
         </div>
     </section>
 {% endblock %}
