--- a/static/css/supermarket.css
+++ b/static/css/supermarket.css
@@ -1,7 +1,7 @@
-.navbar {
-    margin-bottom: 0;
-    border-radius: 0;
-}
+/*.navbar {*/
+    /*margin-bottom: 0;*/
+    /*border-radius: 0;*/
+/*}*/
 
 .navbar-market{
     background-color: #88ca41;
@@ -21,7 +21,7 @@
 }
 
 .navbar-brand-market img {
-    margin-top: 0px;
+    margin-top: 2px;
     margin-left: 15px;
 }
 
