--- a/supermarket/templates/layout.html
+++ b/supermarket/templates/layout.html
@@ -32,9 +32,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            {% load static %}
-            <a class="navbar-brand navbar-brand-market"><img src="{% static '/img/logo.png' %}"
-                                                             style="height: 170%; border-radius: 10%"></a>
+            <a class="navbar-brand navbar-brand-market"><img src="{% static '/img/logo.jpg' %}"
+                                                             style="height: 170%; border-radius: 5%"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -44,9 +43,9 @@
                 <li{% block class_promocoes %}{% endblock %}><a href="{% url 'supermarket.promocoes' %}"><i
                         class="fa fa-shopping-cart" style="font-size:16px"></i>
                     Promoções</a></li>
-                <li {% block class_sobre %}{% endblock %}><a href="{% url 'supermarket.sobre' %}"><i
-                        class="fa fa-question-circle-o" style="font-size:16px"></i>
-                    Sobre</a></li>
+{#                <li {% block class_sobre %}{% endblock %}><a href="{% url 'supermarket.sobre' %}"><i#}
+{#                        class="fa fa-question-circle-o" style="font-size:16px"></i>#}
+{#                    Sobre</a></li>#}
                 <li{% block class_contato %}{% endblock %}><a href="{% url 'supermarket.contato' %}"><i
                         class="fa fa-envelope-o" style="font-size:16px"></i> Contato</a>
                 </li>
