--- a/supermarket/templates/supermarket/meus_dados.html
+++ b/supermarket/templates/supermarket/meus_dados.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-{% block title %}Meus dados - SuperMarket{% endblock %}
+{% block title %}Meus dados - Mercado com Desconto{% endblock %}
 
 {% block principal %}
     <section class="section-content">
