--- a/supermarket/templates/supermarket/minhas_promocoes.html
+++ b/supermarket/templates/supermarket/minhas_promocoes.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block titulo %}Minhas promoções - SuperMarket{% endblock %}
+{% block titulo %}Minhas promoções - Mercado com Desconto{% endblock %}
 
 {% block principal %}
     <section class="section-content">
