--- a/supermarket/templates/supermarket/sobre.html
+++ b/supermarket/templates/supermarket/sobre.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block class_sobre %} class="active" {% endblock %}
-{% block titulo %}Sobre - SuperMarket{% endblock %}
+{% block titulo %}Sobre - Mercado com Desconto{% endblock %}
 
 {% block principal %}
     <section class="section-content">
