--- a/supermarket/templates/layout.html
+++ b/supermarket/templates/layout.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
 <head>
     {% block head %} {% endblock %}
-    <title>{% block titulo %}SuperMarket{% endblock %}</title>
+    <title>{% block titulo %}Mercado com Desconto{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static '/css/supermarket.css' %}">
