--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block class_promocoes %} class="active" {% endblock %}
-{% block titulo %}Promoções - SuperMarket{% endblock %}
+{% block titulo %}Promoções - Mercado com Desconto{% endblock %}
 
 
 {% block principal %}
